1. llm model 자동 설정 2. agent 부분 추상화

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.128.0",
     "langchain>=1.2.3",
-    "langchain-community>=0.3.0",
+    "langchain-ollama>=0.1.0",
     "langchain-openai>=0.2.0",
     "langgraph>=1.0.6",
     "openai>=1.0.0",
