--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.128.0",
+    "streamlit>=1.28.0",
     "langchain>=1.2.3",
     "langchain-ollama>=0.1.0",
     "langchain-openai>=0.2.0",
