--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,18 @@ dependencies = [
     "openai>=1.0.0",
     "uvicorn>=0.40.0",
     "python-dotenv>=1.0.0",
+    "langchain-chroma>=1.1.0",
+    "langchainhub>=0.1.21",
+    "ipython>=9.9.0",
+    "officeparser>=1.0.1",
+    "langchain-community>=0.4.1",
+    "langchain-text-splitters>=1.1.0",
+    "python-pptx>=1.0.2",
+    "pdf2image>=1.17.0",
+    "langchain-huggingface>=1.2.0",
+    "sentence-transformers>=5.2.0",
 ]
+
+[tool.basedpyright]
+venvPath = "."
+venv = ".venv"
