feat : 멀티 에이전트 with llm router 개발

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ dependencies = [
     "pdf2image>=1.17.0",
     "langchain-huggingface>=1.2.0",
     "sentence-transformers>=5.2.0",
+    "duckduckgo-search>=8.1.1",
+    "ddgs>=9.10.0",
 ]
 
 [tool.basedpyright]
